Modification to travis.yml so that it sends empty commits to update the gh pages.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,5 @@ deploy:
   local_dir: dist
   on:
     branch: master
+
+after_deploy: git commit --allow-empty -m "Empty commit to update the gh-pages"
