--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@ssthouse/vue-tree-chart": "^0.5.2",
+    "d3": "^4.13.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
@@ -17,6 +18,7 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@types/d3": "^6.3.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
