--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
   },
   "dependencies": {
     "@ssthouse/vue-tree-chart": "^0.5.2",
-    "d3": "^4.13.0",
     "core-js": "^3.6.5",
+    "d3": "^4.13.0",
+    "patch-package": "^6.4.7",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
+    "vue-select": "^3.13.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@types/d3": "^6.3.0",
+    "@types/vue-select": "^3.11.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
